# CppCalc

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile
__cmake_systeminformation/: CMakeCache.txt
backend/: CMakeLists.txt
backend/include/core/: Calculator.hpp  History.hpp  Variables.hpp
backend/src/core/: Functions.cpp  History.cpp  Tokenizer.cpp
backend/src/server/: main.cpp
frontend/: index.html  package-lock.json
frontend/src/: App.tsx  index.css
include/: Parser.hpp  Token.hpp  Tokenizer.hpp
include/cli/: Commands.hpp
include/core/: Calculator.hpp  Functions.hpp  Parser.hpp  Tokenizer.hpp
src/: Parser.cpp  Token.cpp  Tokenizer.cpp  main.cpp
src/cli/: Commands.cpp  main.cpp
src/core/: Calculator.cpp  History.cpp  Parser.cpp  Token.cpp  Variables.cpp
src/server/: main.cpp
tests/: CalculatorTests.cpp
